[gd_scene load_steps=7 format=3 uid="uid://f1s1ob1ollnj"]

[ext_resource type="Theme" uid="uid://dpcpuqlxm11ek" path="res://themes/basic_ui.tres" id="1_7mbr3"]
[ext_resource type="Script" path="res://scenes/main_menu.gd" id="1_b7tti"]
[ext_resource type="Texture2D" uid="uid://4h3anxi7cmsu" path="res://!!media/actualgame/backgrounds/background.png" id="3_52s3e"]

[sub_resource type="Animation" id="Animation_esjgh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BackGround/Menu:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(75, 410)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BackGround/Menu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_0plhh"]
resource_name = "start"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BackGround/Menu:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(75, 410), Vector2(60, 410)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BackGround/Menu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_12x46"]
_data = {
"RESET": SubResource("Animation_esjgh"),
"start": SubResource("Animation_0plhh")
}

[node name="Menu" type="Control" groups=["Persist"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_7mbr3")
script = ExtResource("1_b7tti")

[node name="BackGround" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_52s3e")
expand_mode = 1

[node name="Menu" type="VBoxContainer" parent="BackGround"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 60.0
offset_top = -130.0
offset_right = 245.0
offset_bottom = 105.0
grow_vertical = 2
theme_override_constants/separation = 25

[node name="StartButton" type="Button" parent="BackGround/Menu"]
layout_mode = 2
text = "KEY_START"

[node name="SettingsButton" type="Button" parent="BackGround/Menu"]
layout_mode = 2
text = "KEY_SETTINGS"

[node name="Credits" type="Button" parent="BackGround/Menu"]
layout_mode = 2
text = "KEY_CREDITS"

[node name="ExitButton" type="Button" parent="BackGround/Menu"]
layout_mode = 2
text = "KEY_EXIT"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "start"
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_12x46")
}

[connection signal="pressed" from="BackGround/Menu/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="BackGround/Menu/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="BackGround/Menu/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="BackGround/Menu/ExitButton" to="." method="_on_exit_button_pressed"]
